# prebindgen

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md  build.rs  test_functions.rs  test_script.sh  update_tests.py
.github/workflows/: rust.yml
cargo-prebindgen-project-root/: Cargo.toml
cargo-prebindgen-project-root/src/: main.rs
docs/: jnigen-api-critique.md
examples/: comprehensive_example.rs  default_path_test.rs  path_test.rs  perftest-bench.sh  regen-check.sh  rust_analyzer_demo.rs  temp_demo.rs  temp_fallback_test.rs  usage_example.rs
examples/covertest-helpers/: Cargo.toml
examples/covertest-helpers/src/: lib.rs
examples/covertest-kotlin/: Cargo.toml  README.md  build.gradle.kts  build.rs  settings.gradle.kts
examples/covertest-kotlin/kotlin/: REPORT.md
examples/covertest-kotlin/kotlin/io/prebindgen/covertest/: CovResource.kt  NativeLibrary.kt  PayloadVecHandler.kt  Test.kt
examples/covertest-kotlin/kotlin/io/prebindgen/covertest/analytics/: ManualOverloads.kt
examples/covertest-kotlin/kotlin/io/prebindgen/covertest/model/: Freshness.kt
examples/covertest-kotlin/src/: generated_bindings.rs  lib.rs
examples/example-cbindgen/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  example_ffi.h
examples/example-cbindgen/include/: example_ffi.h  example_flat.h  example_flat_aarch64.h  example_flat_x86_64.h
examples/example-cbindgen/src/: generated_bindings.rs  lib.rs
examples/example-ffi/: Cargo.toml  build.rs
examples/example-ffi/src/: lib.rs
examples/example-flat/: Cargo.toml  build.rs
examples/example-flat/src/: lib.rs
examples/ffi_binding/: Cargo.toml  build.rs
examples/ffi_common/: Cargo.toml  build.rs
examples/perftest-c/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
examples/perftest-c/c/: perftest.c
examples/perftest-c/include/: perftest.h
examples/perftest-c/src/: lib.rs
examples/perftest-flat/: Cargo.toml
examples/perftest-kotlin/: Cargo.toml  build.gradle.kts  build.rs  settings.gradle.kts
examples/perftest-kotlin/kotlin/io/prebindgen/perftest/: Bench.kt  NativeLibrary.kt
examples/perftest-kotlin/src/: generated_bindings.rs  lib.rs
independent_tests/: Cargo.toml  README.md
independent_tests/src/: debug.rs  lib.rs
independent_tests/tests/: copy_structs_enums.rs  no_out_dir.rs  path_access.rs
prebindgen/: Cargo.toml  output.jsonl
prebindgen-opaque-types/: Cargo.toml  README.md
prebindgen-opaque-types/src/: lib.rs
prebindgen-proc-macro/: Cargo.toml  build.rs
prebindgen-proc-macro/src/: lib.rs
prebindgen-proc-macro/tests/: json_lines_test.rs
prebindgen-project-root/: Cargo.toml
prebindgen/src/: builder.rs  cfg_expr.rs  codegen.rs  file_builder.rs  group_builder.rs  jsonl.rs  lib.rs  query.rs  record.rs  rust_ffi.rs  rust_file.rs
prebindgen/src/api/: buildrs.rs  destination.rs  feature_filter.rs  ffi_converter.rs  mod.rs  query.rs  record.rs  source.rs  test_util.rs
prebindgen/src/api/batching/: cfg_filter.rs  feature_filter.rs  ffi_converter.rs  mod.rs
prebindgen/src/api/collect/: destination.rs  mod.rs
prebindgen/src/api/core/: domain.rs  expand.rs  gravestone.rs  mod.rs  niches.rs  prebindgen.rs  registry.rs  resolve.rs  shape.rs  types_util.rs  unfold.rs  write.rs
prebindgen/src/api/core/expand/: error.rs  plan.rs  tests.rs
prebindgen/src/api/core/niches/: tests.rs
prebindgen/src/api/core/registry/: tests.rs
prebindgen/src/api/core/resolve/: tests.rs
prebindgen/src/api/core/types_util/: tests.rs
prebindgen/src/api/core/unfold/: error.rs  plan.rs  tests.rs
prebindgen/src/api/core/write/: tests.rs
prebindgen/src/api/filter_map/: feature_filter.rs  mod.rs  struct_align.rs
prebindgen/src/api/lang/: cbindgen.rs  mod.rs
prebindgen/src/api/lang/cbindgen/: builder.rs  convert.rs  emit.rs  mod.rs  selector.rs  tests.rs  trait_impl.rs
prebindgen/src/api/lang/cbindgen/tests/: builder.rs  callbacks.rs  errors.rs  inputs.rs  lowering.rs  mod.rs  returns.rs  structs.rs
prebindgen/src/api/lang/jnigen/: mod.rs  util.rs
prebindgen/src/api/lang/jnigen/jni/: box_helpers.rs  builder.rs  byte_array_helpers.rs  classify.rs  config.rs  decl.rs  emit.rs  fn_plan.rs  fold.rs  iface.rs  iface_method.rs  jni_binding_error.rs  jni_ext.rs  jni_kotlin_ext.rs  kotlin_emit.rs  metadata.rs  mod.rs  overloads.rs  prim.rs  render.rs  report.rs  selector.rs  string_helpers.rs  struct_plan.rs  symbol.rs  symbols.rs  tests.rs  trait_impl.rs  wire_access.rs
prebindgen/src/api/lang/jnigen/jni/emit/: callback.rs  convert.rs  delivery.rs  flat_input.rs  mod.rs  names.rs  struct_out.rs  vec_build.rs  wrapper.rs
prebindgen/src/api/lang/jnigen/jni/iface/: tests.rs
prebindgen/src/api/lang/jnigen/jni/templates/: callback.rs  exception.rs  mod.rs
prebindgen/src/api/lang/jnigen/jni/tests/: callbacks.rs  config.rs  consts.rs  cross_artifact.rs  flatten.rs  mod.rs  niches.rs  snapshots.rs  symbols.rs  values.rs
prebindgen/src/api/lang/jnigen/kotlin/: file.rs  kotlin_ext.rs  mod.rs  type_map.rs
prebindgen/src/api/lang/jnigen/util/: tests.rs
prebindgen/src/api/map/: mod.rs  replace_types.rs  strip_derive.rs  strip_macro.rs
prebindgen/src/api/utils/: edition.rs  jsonl.rs  mod.rs  target_triple.rs
prebindgen/src/api/utils/jsonl/: tests.rs
prebindgen/src/api/utils/target_triple/: tests.rs
prebindgen/src/codegen/: cfg_expr.rs  mod.rs  process_features.rs  replace_types.rs  tests.rs  transform_function.rs  transform_function_to_stub.rs
prebindgen/src/codegen/cfg_expr/: cfg_expr_tests.rs
prebindgen/src/codegen/process_features/: tests.rs
prebindgen/src/codegen/tests/: cfg_expr.rs  mod.rs
prebindgen/src/filters/: features.rs  mod.rs
prebindgen/src/source/: mod.rs
prebindgen/src/utils/: edition.rs  jsonl.rs  mod.rs  target.rs  target_triple.rs
src/: lib.rs  test_structs.rs
tests/: Cargo.toml  build.rs  copy_structs_enums.rs  integration_test.rs  json_lines_test.rs  no_out_dir.rs  path_access.rs  simple_test.rs
tests-integration/: Cargo.toml  README.md  build.rs
tests/src/: test_structures.rs
tests/tests/: json_lines_test.rs  path_access.rs
(+8 files in other folders)
