[workspace]
members = [
    ".",
    "prebindgen-proc-macro",
    "tests-integration",
    "examples/ffi_binding",
    "examples/ffi_common",
]
resolver = "2"

[workspace.dependencies]
prebindgen = { path = "." }
prebindgen-proc-macro = { path = "prebindgen-proc-macro" }

[package]
name = "prebindgen"
version = "0.1.0"
edition = "2024"
description = "JSON structure definitions for prebindgen"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
