[workspace]
members = [
    "prebindgen",
    "prebindgen-proc-macro",
    "prebindgen-project-root",
    "cargo-prebindgen-project-root",
    "examples/example-cbindgen",
    "examples/example-ffi",
]
resolver = "2"
package.version = "0.4.0"
package.edition = "2021"
package.rust-version = "1.75"
package.license = "MIT OR Apache-2.0"
package.authors = ["Michael Ilyin <milyin@gmail.com>"]
package.repository = "https://github.com/milyin/prebindgen"
package.documentation = "https://docs.rs/prebindgen"
package.readme = "README.md"
package.keywords = ["ffi", "bindings", "cbindgen", "csbindgen", "cross-platform"]
package.categories = ["development-tools", "external-ffi-bindings"] 

[workspace.dependencies]
prebindgen = { path = "prebindgen", version = "0.4.0" }
prebindgen-proc-macro = { path = "prebindgen-proc-macro", version = "0.4.0" }
prebindgen-project-root = { path = "prebindgen-project-root", version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.0"
prettyplease = "0.2"
roxygen = "1.0.4"
tempfile = "3.0"
itertools = "0.14.0"
if_rust_version = "1.0"
konst = "0.3"

[patch]

[patch.crates-io]

[patch.crates-io.prebindgen-project-root]
path = "prebindgen-project-root"
