[package]
name = "prebindgen-opaque-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }
description = "Build-time generator of opaque #[repr(C, align)] counterpart structs (size/align probe) for prebindgen's lang::Cbindgen value_opaque"
readme = "README.md"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "std", "archive", "elf", "macho", "pe", "coff"] }
syn = { workspace = true }
quote = { workspace = true }
toml = { workspace = true }
# Version (crates.io) dependency, NOT a path/workspace dep, so a downstream
# consumer's `[patch.crates-io]` (added by `cargo prebindgen-project-root install`)
# can redirect it to the consumer's own in-workspace copy — which is how this
# crate learns the *destination* project's root. Within this workspace the
# top-level `[patch.crates-io]` supplies the local copy.
prebindgen-project-root = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = { workspace = true }
