[package]
name = "prebindgen-opaque-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }
description = "Build-time generator of opaque #[repr(C, align)] counterpart structs (size/align probe) for prebindgen's lang::Cbindgen value_opaque"
readme = "README.md"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "std", "archive", "elf", "macho", "pe", "coff"] }
syn = { workspace = true }
quote = { workspace = true }
toml = { workspace = true }
# This crate must be patched into the destination workspace by
# `cargo workspace-root-patch install`, so it can discover the destination
# project's root at build time. Pin the helper's source while the C proof of
# concept remains outside the normal release set.
workspace-root-patch = { git = "https://github.com/milyin/workspace-root-patch", rev = "4d4c8a5" }
anyhow = "1"

[dev-dependencies]
tempfile = { workspace = true }
