[package]
name = "prebindgen-opaque-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }
description = "Build-time generator of opaque #[repr(C, align)] counterpart structs (size/align probe) for prebindgen's lang::Cbindgen value_opaque"
readme = "README.md"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "std", "archive", "elf", "macho", "pe", "coff"] }
syn = { workspace = true }
quote = { workspace = true }
toml = { workspace = true }
# The destination workspace patches this dependency with the proxy installed by
# `cargo get-cargo-lock install`, allowing this externally developed crate to
# use the destination's lockfile.
get-cargo-lock = "0.1.0"
anyhow = "1"

[dev-dependencies]
tempfile = { workspace = true }
