[package]
name = "prebindgen-proc-macro"
version = { workspace = true }
edition = { workspace = true }
description = "Procedural macros for prebindgen - export FFI definitions for binding generation"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = {workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prebindgen = { workspace = true }
rand = { workspace = true }

[features]
debug = ["prebindgen/debug"]

[dev-dependencies]
serde_json = { workspace = true }
