[package]
name = "prebindgen-proc-macro"
version = { workspace = true }
edition = { workspace = true }
description = "Procedural macros for prebindgen - export FFI definitions for binding generation"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = {workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prebindgen = { workspace = true }
rand = { workspace = true }

[features]
debug = ["prebindgen/debug"]
# Inject `#[inline]` onto every `#[prebindgen]` function in the wrapper crate so
# thin FFI shims stay zero-cost for Rust consumers that don't enable LTO. Opt-in
# (non-default): only appropriate for thin-wrapper libraries. See crate docs.
inline = []

[dev-dependencies]
serde_json = { workspace = true }
