[package]
name = "prebindgen"
version = { workspace = true }
edition = { workspace = true }
description = "Separate FFI implementation and language-specific binding into different crates"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
regex = { workspace = true }
prettyplease = { workspace = true }
roxygen = { workspace = true }

[features]
debug = []

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
