[package]
name = "prebindgen"
version = { workspace = true }
edition = { workspace = true }
description = "Separate FFI implementation and language-specific binding into different crates"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
regex = { workspace = true }
prettyplease = { workspace = true }
roxygen = { workspace = true }
if_rust_version = { workspace = true }
konst = { workspace = true, features = ["cmp"] }
itertools = { workspace = true }
toml = { workspace = true }
jni = "0.21.1"

[features]
debug = []
# Experimental C / cbindgen adapter. Its API and generated ABI conventions are
# not covered by the 0.5 semver guarantee.
unstable-cbindgen = []

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
