[package]
name = "tests-integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prebindgen = { workspace = true }
prebindgen-proc-macro = { workspace = true }
serde_json = "1.0"

[build-dependencies]
prebindgen = { workspace = true }

[[bin]]
name = "test_structures"
path = "src/test_structures.rs"
