[package]
name = "covertest-kotlin"
version = { workspace = true }
edition = { workspace = true }
build = "build.rs"

[lib]
name = "covertest_kotlin"
crate-type = ["cdylib"]

[dependencies]
prebindgen = { workspace = true }
perftest-flat = { path = "../perftest-flat" }
covertest-helpers = { path = "../covertest-helpers" }
jni = "0.21.1"
konst = "0.3.0"
# The generated JNI error path logs via `tracing::error!`.
tracing = "0.1"

[build-dependencies]
prebindgen = { workspace = true }
syn = { workspace = true }
perftest-flat = { path = "../perftest-flat" }
covertest-helpers = { path = "../covertest-helpers" }

# NOTE: a production JNI crate should set `[profile.release] panic = "abort"`
# (a Rust panic unwinding into the JVM is UB). That profile key is only honored
# in a workspace ROOT, and this example is a member of the prebindgen workspace,
# so it is omitted here — the coverage test uses valid inputs and never panics.
