[package]
name = "example-cbindgen"
version = { workspace = true }
edition = { workspace = true }
build = "build.rs"

[features]
unstable = ["example-ffi/unstable"]
internal = ["example-ffi/internal"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
prebindgen = { workspace = true }
example-ffi = { path = "../example-ffi" }

[build-dependencies]
prebindgen = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
cbindgen = "0.29.0"
example-ffi = { path = "../example-ffi" }