[package]
name = "example-cbindgen"
version = { workspace = true }
edition = { workspace = true }
build = "build.rs"

[features]
unstable = ["example-flat/unstable"]
internal = ["example-flat/internal"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
prebindgen = { workspace = true, features = ["unstable-cbindgen"] }
example-flat = { path = "../example-flat" }
konst = "0.3.0"

[build-dependencies]
prebindgen = { workspace = true, features = ["unstable-cbindgen"] }
syn = { workspace = true }
cbindgen = "=0.29.4"
example-flat = { path = "../example-flat" }
