[package]
name = "perftest-c"
version = { workspace = true }
edition = { workspace = true }
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
prebindgen = { workspace = true, features = ["unstable-cbindgen"] }
perftest-flat = { path = "../perftest-flat" }
konst = "0.3.0"

[build-dependencies]
prebindgen = { workspace = true, features = ["unstable-cbindgen"] }
syn = { workspace = true }
cbindgen = "=0.29.4"
perftest-flat = { path = "../perftest-flat" }
